# AdwaitaExtended

./: .gitignore  README.md  meson.build
AdwaitaEx/: index.theme  meson.build
AdwaitaEx-dark/: index.theme  meson.build
AdwaitaEx-dark/gnome-shell/: README.md  gnome-shell-sass  gnome-shell.scss  meson.build  pad-osd.css
AdwaitaEx-dark/gtk-2.0/: clean-assets-external.sh  clean-assets.sh  gtkrc  meson.build  render-assets-external.sh  render-assets.sh
AdwaitaEx-dark/gtk-3.0/: _apps.scss  _colors-public.scss  _colors.scss  _common.scss  _drawing.scss  _tweaks.scss  assets  gtk-dark.scss  meson.build
AdwaitaEx-dark/plank/: dock.theme  meson.build
AdwaitaEx-dark/xfwm4/: meson.build  render-assets.sh  themerc  top-left-active.xpm  top-right-active.xpm
AdwaitaEx/gnome-shell/: README.md  gnome-shell-sync.sh  gnome-shell.scss  meson.build
AdwaitaEx/gnome-shell/gnome-shell-sass/: _colors.scss  _common.scss  _extensions.scss
AdwaitaEx/gnome-shell/gnome-shell-sass/widgets/: _app-grid.scss  _calendar.scss  _dash.scss  _dialogs.scss  _entries.scss  _keyboard.scss  _login-dialog.scss  _message-list.scss  _misc.scss  _network-dialog.scss  _notifications.scss  _panel.scss  _popovers.scss  _screen-shield.scss  _search-entry.scss  _switcher-popup.scss  _switches.scss  _window-picker.scss  _workspace-thumbnails.scss
AdwaitaEx/gtk-2.0/: clean-assets-external.sh  gtkrc  meson.build  render-assets-external.sh
AdwaitaEx/gtk-3.0/: _apps.scss  _colors.scss  _common.scss  _drawing.scss  _tweaks.scss  gtk.scss  meson.build  render-assets.sh
AdwaitaEx/plank/: dock.theme  meson.build
AdwaitaEx/xfwm4/: meson.build  themerc  top-left-active.xpm  top-right-active.xpm
