xfwm4_dir = join_paths(starter_dir_dark, 'xfwm4')

# Xfwm4 theme files to copy
xfwm4_theme_data_sources = [
	'top-left-active.png',
	'top-left-inactive.png',
	'top-left-active.xpm',
	'top-left-inactive.xpm',
	'top-right-active.png',
	'top-right-inactive.png',
	'top-right-active.xpm',
	'top-right-inactive.xpm',
	'bottom-active.png',
	'bottom-inactive.png',
	'bottom-left-active.png',
	'bottom-left-inactive.png',
	'bottom-right-active.png',
	'bottom-right-inactive.png',
	'left-active.png',
	'left-inactive.png',
	'right-active.png',
	'right-inactive.png',
	'close-active.png',
	'close-inactive.png',
	'close-prelight.png',
	'close-pressed.png',
	'hide-active.png',
	'hide-inactive.png',
	'hide-prelight.png',
	'hide-pressed.png',
	'maximize-active.png',
	'maximize-inactive.png',
	'maximize-prelight.png',
	'maximize-pressed.png',
	'maximize-toggled-active.png',
	'maximize-toggled-inactive.png',
	'maximize-toggled-prelight.png',
	'maximize-toggled-pressed.png',
	'menu-active.png',
	'menu-inactive.png',
	'menu-prelight.png',
	'menu-pressed.png',
	'shade-active.png',
	'shade-inactive.png',
	'shade-prelight.png',
	'shade-pressed.png',
	'shade-toggled-active.png',
	'shade-toggled-inactive.png',
	'shade-toggled-prelight.png',
	'shade-toggled-pressed.png',
	'stick-active.png',
	'stick-inactive.png',
	'stick-prelight.png',
	'stick-pressed.png',
	'stick-toggled-active.png',
	'stick-toggled-inactive.png',
	'stick-toggled-prelight.png',
	'stick-toggled-pressed.png',
	'title-1-active.png',
	'title-1-inactive.png',
	'title-2-active.png',
	'title-2-inactive.png',
	'title-3-active.png',
	'title-3-inactive.png',
	'title-4-active.png',
	'title-4-inactive.png',
	'title-5-active.png',
	'title-5-inactive.png',
	'themerc'
]

# Install theme files
install_data(xfwm4_theme_data_sources, install_dir: xfwm4_dir)
